# mocktrue

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  go.mod  go.sum  main.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-06-22_040426-script-editor-language-support.md
.omo/drafts/: qt-rust-skeleton-completion.md
.omo/plans/: qt-rust-skeleton-completion.md
desktop/qt-rust/: CMakeLists.txt  README.md
desktop/qt-rust/app/: AppBridge.cpp  AppBridge.h  WindowLifecycleProbe.cpp  WindowLifecycleProbe.h  main.cpp
desktop/qt-rust/qml/: Main.qml
desktop/qt-rust/qml/shell/: ActivityBar.qml  EditorGroups.qml  MainToolbar.qml  MainWindow.qml  Sidebar.qml  StatusBar.qml
desktop/qt-rust/rust/: Cargo.toml
desktop/qt-rust/rust/src/: error.rs  event.rs  lib.rs
desktop/qt-rust/scripts/: assert-no-rg-match.ps1  final-plan-compliance.ps1  final-scope-fidelity.ps1
docs/: ai-automation.md  architecture.md  examples.md  getting-started.md  identity-model.md  index.md  mcp-api.md  protocol-script-templates.md  remote-serial-node.md  serial-cross-platform-inventory.md  serial-graph-design.html  serial-graph-node-catalog.md  serial-graph-runtime-flow.md  troubleshooting.md  use-cases.md  workflows.md  workspace-graph-schema.md
docs/development/: architecture-decisions.md  benchmarks.md  headless-integration.md  migration-contracts.md  migration-feature-matrix.csv  migration-gap-report.md  migration-readiness.md  qml-design-brief.md  qml-first-wave-design.md  qt-rust-migration-playbook.md  qt-rust-skeleton-completion-handoff.md  qt-rust-skeleton-startup.md  release.md  security-tests.md  testing.md  windows-serial-testing.md
docs/script-plan/: agent-assignment-flow.html  index.html  phase-1-topology-scripting.html  phase-2-controlled-endpoint.html  phase-3-hardening.html  style.css  workflow-backend-runtime.html  workflow-frontend-monaco.html  workflow-requirements.html  workflow-review.html  workflow-verification.html  workflow-workspace-mcp-demo.html
frontend/: README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: diagnostic.spec.ts  full_regression.spec.ts  functional.spec.ts  hex_view.spec.ts  multi_port.spec.ts  pcap_record_playback.spec.ts  protocol_parse.spec.ts  real-ui.spec.ts  (+6 more)
scripts/: check-go-coverage.sh  check-migration-matrix.py  check-qt-rust-env.ps1  test-check-go-coverage.sh
(+296 files in other folders)
